--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
+@font-face {
+  font-family: 'Digital-7';
+  font-style: normal;
+  font-weight: 400;
+  src: local(''),
+  url('./assets/fonts/digital-7 (mono italic).ttf') format('truetype')
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,4 +13,13 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.app {
+  margin: 0 auto;
+  text-align: center;
+}
+
+.time-panel {
+  font-family: 'Digital-7', sans-serif;
 }
